# idioms

./: README.md  env.yml  evaluator.py  prepare.py  pyproject.toml  reformat_arrow.py  requirements.txt  train.py
idioms/data/: dataset.py
