[project]
name = "idioms"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.43.3",
    "nltk>=3.9.2",
    "peft==0.13.2",
    "pygments>=2.19.2",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "sentencepiece>=0.2.1",
    "sympy>=1.14.0",
    "transformers==4.44.2",
    "tree-sitter>=0.21.3",
    "tree-sitter-c>=0.21.0",
    "trl==0.11.1",
    "unsloth==2024.10.7",
    "unsloth-zoo==2024.11.0",
    "wandb>=0.17.2",
]
